--- a/src/app/gerenciar/produto/produto-cadastrar/produto-cadastrar.component.html
+++ b/src/app/gerenciar/produto/produto-cadastrar/produto-cadastrar.component.html
@@ -226,19 +226,19 @@
                 <table class="table table-bordered table-hover">
                     <thead class="thead-dark">
                         <tr>
-                            <th scope="col">valor</th>
+                            <th scope="col">Valor</th>
                             <th scope="col">Preço</th>
-                            <th scope="col">Inventário</th>
+                            <th scope="col">Quantidade</th>
                             <th scope="col">Peso</th>
                             <th scope="col">Flag Dominio</th>
                         </tr>
                     </thead>
-                    <tbody formArrayName="itensTipoMedidaFormArray">
+                    <tbody formArrayName="produtoHasItensTipoMedidaFormArray">
                         <tr *ngFor="let item of itensTipoMedida, let i = index" scope="row">
                             <td>{{item.valor}}</td>
                             <td>{{f.precoVenda.value}}</td>
                             <td [formGroupName]="i">
-                                <input type="text" class="form-control" formControlName="inventario"/>
+                                <input type="text" class="form-control" formControlName="quantidade"/>
                             </td>
                             <td>{{f.peso.value}}</td>
                             <td [formGroupName]="i">
@@ -251,7 +251,6 @@
                 </table>
             </div>
         </div>
-
         <div class="card-footer bg-transparent text-right">
             <button *ngSwitchCase="true" type="button" class="btn btn-secondary" (click)="onAlterar()">Alterar</button>
             <button *ngSwitchCase="true" type="button" class="btn btn-secondary ml-1" (click)="onExcluir(produtoForm.value)">Excluir</button>
