--- a/src/app/gerenciar/produto/produto-listar/produto-listar.component.html
+++ b/src/app/gerenciar/produto/produto-listar/produto-listar.component.html
@@ -10,90 +10,101 @@
           <td class="col text-center" colspan="4">{{nunhum_encontrado}}</td>
         </tr>
         </tbody>
-      </table>-->
-      <table class="table table-bordered" *ngFor="let produto of produtos" [routerLink]="['/produto', produto.codigo, 'editar']">
+      </table>
+      [routerLink]="['/produto', produto.codigo, 'editar']"
+      -->
+      <table class="table table-bordered" *ngFor="let produto of produtos; let i = index;" >
         <thead class="thead-dark">
-          <tr>
-            <th scope="col"></th>
-          </tr>
+        <tr>
+          <th scope="col">
+            {{produto.codigo}} - {{produto.barCode}} - {{produto.nome}}
+          </th>
+          <th scope="col" style="align-content: end">
+            <button (click)="onCollaps(i)">Toggle me {{i + 1}}</button>
+          </th>
+        </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>
-              <table class="table table-bordered table-hover">
-                <thead class="thead-dark">
-                <tr>
-                  <th scope="col">Código</th>
-                  <th scope="col">Nome</th>
-                  <th scope="col">Fornecedor</th>
-                  <th scope="col">Categoria</th>
-                  <th scope="col">Subcategoria</th>
-                  <th scope="col">Marca</th>
-                  <th scope="col">Estoque</th>
-                  <th scope="col">Preço Venda</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr scope="row">
-                  <td>{{produto.codigo}}</td>
-                  <td>{{produto.nome}}</td>
-                  <td>{{produto.descricao}}</td>
-                  <td>{{produto.precoVenda}}</td>
-                </tr>
-                </tbody>
-              </table>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <table class="table table-bordered table-hover">
-                <thead class="thead-dark">
-                  <tr>
-                    <th scope="col">Preço custo</th>
-                    <th scope="col">Porcentagem</th>
-                    <th scope="col">Preço venda</th>
-                    <th scope="col">Porcentagem Desconto</th>
-                    <th scope="col">Desconto</th>
-                    <th scope="col">Preço Oferta</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr scope="row">
-                    <td>{{produto.precoCusto}}</td>
-                    <td>{{produto.porcentagem}}</td>
-                    <td>{{produto.precoVenda}}</td>
-                    <td>{{produto.porcentagemDesconto}}</td>
-                    <td>{{produto.desconto}}</td>
-                    <td>{{produto.precoOferta}}</td>
-                  </tr>
-                </tbody>
-              </table>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <table class="table table-bordered table-hover">
-                <thead class="thead-dark">
-                <tr>
-                  <th scope="col">valor</th>
-                  <th scope="col">Quantidade</th>
-                  <th scope="col">Flag Dominio</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr *ngFor="let item of produto.medida.itensTipoMedida" scope="row">
-                  <td>{{item.valor}}</td>
-                  <td>{{item.valor}}</td>
-                  <td>
-                    <label *ngFor="let dominio of produto.dominios">
-                      <input type="checkbox">{{dominio.nome}}
-                    </label>
-                  </td>
-                </tr>
-                </tbody>
-              </table>
-            </td>
-          </tr>
+        <tr>
+          <td colspan="2">
+            <table class="table table-bordered">
+              <thead>
+              <tr style="background-color: lightgrey; font-weight: bold">
+                <th scope="col">Código de Barras</th>
+                <th scope="col">Nome</th>
+                <th scope="col">Fornecedor</th>
+                <th scope="col">Categoria</th>
+                <th scope="col">Subcategoria</th>
+                <th scope="col">Marca</th>
+                <th scope="col">Estoque</th>
+                <th scope="col">Preço Venda</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr scope="row">
+                <td>{{produto.barCode}}</td>
+                <td>{{produto.nome}}</td>
+                <td>{{produto.fornecedor.nome}}</td>
+                <td>{{produto.categoria.nome}}</td>
+                <td>{{produto.subcategoria.nome}}</td>
+                <td>{{produto.marca.nome}}</td>
+                <td>0</td>
+                <td>{{produto.precoVenda}}</td>
+              </tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+        <tr *ngIf="i === expandedIndex">
+          <td colspan="2">
+            <table class="table">
+              <thead>
+              <tr style="background-color: lightgrey; font-weight: bold">
+                <th scope="col">Preço custo</th>
+                <th scope="col">Porcentagem</th>
+                <th scope="col">Preço venda</th>
+                <th scope="col">Porcentagem Desconto</th>
+                <th scope="col">Desconto</th>
+                <th scope="col">Preço Oferta</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr scope="row">
+                <td>{{produto.precoCusto}}</td>
+                <td>{{produto.porcentagem}}</td>
+                <td>{{produto.precoVenda}}</td>
+                <td>{{produto.porcentagemDesconto}}</td>
+                <td>{{produto.desconto}}</td>
+                <td>{{produto.precoOferta}}</td>
+              </tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+        <tr *ngIf="i === expandedIndex">
+          <td colspan="2">
+            <table class="table">
+              <thead>
+              <tr style="background-color: lightgrey; font-weight: bold">
+                <th scope="col">valor</th>
+                <th scope="col">Quantidade</th>
+                <th scope="col">Flag Dominio</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr *ngFor="let item of produto.medida.itensTipoMedida" scope="row">
+                <td>{{item.valor}}</td>
+                <td>{{item.valor}}</td>
+                <td>
+                  <label *ngFor="let dominio of produto.dominios">
+                    <input type="checkbox">{{dominio.nome}}
+                  </label>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
         </tbody>
       </table>
     </div>
