--- a/src/app/gerenciar/produto/produto-cadastrar/produto-cadastrar.component.html
+++ b/src/app/gerenciar/produto/produto-cadastrar/produto-cadastrar.component.html
@@ -210,6 +210,11 @@
                         <div *ngIf="submitted && f.marca.errors" class="invalid-feedback">
                             <div *ngIf="f.marca.errors.required">Marca é obrigatório</div>
                         </div>
+
+                        <div *ngIf="submitted && f.marca.errors" class="invalid-feedback">
+                            <div *ngIf="f.marca.errors.required">Marca é obrigatório</div>
+                        </div>
+
                     </div>
                     <div class="col-md-4 mb-4">
                         <label>&nbsp;</label>
@@ -233,15 +238,15 @@
                             <th scope="col">Flag Dominio</th>
                         </tr>
                     </thead>
-                    <tbody formArrayName="produtoHasItensTipoMedidaFormArray">
-                        <tr *ngFor="let item of itensTipoMedida, let i = index" scope="row" >
+                    <tbody formArrayName="pHITipoMedida">
+                        <tr *ngFor="let item of itensTipoMedida, let i = index" scope="row" [formGroupName]="i">
                             <td>{{item.valor}}</td>
                             <td>{{f.precoVenda.value}}</td>
                             <td>
-                                <!--<input type="text" class="form-control" formControlName="quantidade"/>-->
+                                <input type="text" class="form-control" formControlName="quantidade"/>
                             </td>
                             <td>{{f.peso.value}}</td>
-                            <td [formGroupName]="i">
+                            <td>
                                 <label formArrayName="dominiosFormArray" *ngFor="let dominio of dominios, let id = index">
                                     <input type="checkbox" [formControlName]="id">{{dominio.nome}}
                                 </label>
