--- a/src/app/gerenciar/fornecedor/fornecedor-cadastrar/fornecedor-cadastrar.component.html
+++ b/src/app/gerenciar/fornecedor/fornecedor-cadastrar/fornecedor-cadastrar.component.html
@@ -14,6 +14,7 @@
                [ngClass]="{ 'is-invalid': submitted && f.nome.errors }"/>
         <div *ngIf="submitted && f.nome.errors" class="invalid-feedback">
           <div *ngIf="f.nome.errors.required">Nome é obrigatório</div>
+          <div *ngIf="f.nome.errors.maxlength">O campo deve conter no máximo 45 caracteres</div>
         </div>
       </div>
       <div class="form-group">
@@ -22,6 +23,7 @@
                   [ngClass]="{ 'is-invalid': submitted && f.descricao.errors }"></textarea>
         <div *ngIf="submitted && f.descricao.errors" class="invalid-feedback">
           <div *ngIf="f.descricao.errors.required">Descrição é obrigatório</div>
+          <div *ngIf="f.descricao.errors.maxlength">O campo deve conter no máximo 45 caracteres</div>
         </div>
       </div>
     </div>
