--- a/src/app/gerenciar/produto/produto-cadastrar/produto-cadastrar.component.html
+++ b/src/app/gerenciar/produto/produto-cadastrar/produto-cadastrar.component.html
@@ -14,6 +14,7 @@
                                    [ngClass]="{ 'is-invalid': submitted && f.barCode.errors }"/>
                             <div *ngIf="submitted && f.barCode.errors" class="invalid-feedback">
                                 <div *ngIf="f.barCode.errors.required">Código de Barras é obrigatório</div>
+                                <div *ngIf="f.barCode.errors.maxlength">O campo deve conter no máximo 100 caracteres</div>
                             </div>
                         </div>
                     </div>
@@ -24,6 +25,7 @@
                                [ngClass]="{ 'is-invalid': submitted && f.nome.errors }"/>
                         <div *ngIf="submitted && f.nome.errors" class="invalid-feedback">
                             <div *ngIf="f.nome.errors.required">Nome é obrigatório</div>
+                            <div *ngIf="f.nome.errors.maxlength">O campo deve conter no máximo 100 caracteres</div>
                         </div>
                     </div>
                 </div>
@@ -33,6 +35,7 @@
                               [ngClass]="{ 'is-invalid': submitted && f.descricao.errors }"></textarea>
                     <div *ngIf="submitted && f.descricao.errors" class="invalid-feedback">
                         <div *ngIf="f.descricao.errors.required">Descrição é obrigatório</div>
+                        <div *ngIf="f.descricao.errors.maxlength">O campo deve conter no máximo 150 caracteres</div>
                     </div>
                 </div>
             </div>
@@ -42,8 +45,12 @@
                     <div class="col-md-4 mb-4">
                         <div class="form-group">
                             <label for="precoCusto">Preço de custo</label>
-                            <input type="text" formControlName="precoCusto" class="form-control"
+                            <input currencyMask [(ngModel)]="precoCusto"
+                                   formControlName="precoCusto"
+                                   class="form-control"
+                                   [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
                                    [ngClass]="{ 'is-invalid': submitted && f.precoCusto.errors }"/>
+
                             <div *ngIf="submitted && f.precoCusto.errors" class="invalid-feedback">
                                 <div *ngIf="f.precoCusto.errors.required">Preço de custo é obrigatório</div>
                             </div>
@@ -52,7 +59,7 @@
                     <div class="col-md-4 mb-4">
                         <label>&nbsp;</label>
                         <label for="porcentagem">Porcentagem</label>
-                        <input type="text" formControlName="porcentagem" class="form-control"
+                        <input type="number" formControlName="porcentagem" class="form-control"
                                [ngClass]="{ 'is-invalid': submitted && f.porcentagem.errors }"/>
                         <div *ngIf="submitted && f.porcentagem.errors" class="invalid-feedback">
                             <div *ngIf="f.porcentagem.errors.required">Porcentagem é obrigatório</div>
@@ -61,8 +68,13 @@
                     <div class="col-md-4 mb-4">
                         <label>&nbsp;</label>
                         <label for="precoVenda">Preço de venda</label>
-                        <input type="text" formControlName="precoVenda" class="form-control"
+
+                        <input currencyMask [(ngModel)]="precoVenda"
+                               formControlName="precoVenda"
+                               class="form-control"
+                               [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
                                [ngClass]="{ 'is-invalid': submitted && f.precoVenda.errors }"/>
+
                         <div *ngIf="submitted && f.precoVenda.errors" class="invalid-feedback">
                             <div *ngIf="f.precoVenda.errors.required">Preço de venda é obrigatório</div>
                         </div>
@@ -75,7 +87,7 @@
                     <div class="col-md-4 mb-4">
                         <div class="form-group">
                             <label for="porcentagemDesconto">Porcentagem de desconto</label>
-                            <input type="text" formControlName="porcentagemDesconto" class="form-control"
+                            <input type="number" formControlName="porcentagemDesconto" class="form-control"
                                    [ngClass]="{ 'is-invalid': submitted && f.porcentagemDesconto.errors }"/>
                             <div *ngIf="submitted && f.porcentagemDesconto.errors" class="invalid-feedback">
                                 <div *ngIf="f.porcentagemDesconto.errors.required">Porcentagem de desconto é obrigatório</div>
@@ -85,8 +97,13 @@
                     <div class="col-md-4 mb-4">
                         <label>&nbsp;</label>
                         <label for="desconto">Valor de desconto</label>
-                        <input type="text" formControlName="desconto" class="form-control"
+
+                        <input currencyMask [(ngModel)]="desconto"
+                               formControlName="desconto"
+                               class="form-control"
+                               [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
                                [ngClass]="{ 'is-invalid': submitted && f.desconto.errors }"/>
+
                         <div *ngIf="submitted && f.desconto.errors" class="invalid-feedback">
                             <div *ngIf="f.desconto.errors.required">Valor de desconto é obrigatório</div>
                         </div>
@@ -94,8 +111,13 @@
                     <div class="col-md-4 mb-4">
                         <label>&nbsp;</label>
                         <label for="precoOferta">Preço oferta</label>
-                        <input type="text" formControlName="precoOferta" class="form-control"
+
+                        <input currencyMask [(ngModel)]="precoOferta"
+                               formControlName="precoOferta"
+                               class="form-control"
+                               [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
                                [ngClass]="{ 'is-invalid': submitted && f.precoOferta.errors }"/>
+
                         <div *ngIf="submitted && f.precoOferta.errors" class="invalid-feedback">
                             <div *ngIf="f.precoOferta.errors.required">Preço oferta é obrigatório</div>
                         </div>
@@ -103,7 +125,7 @@
                 </div>
                 <div class="form-group">
                     <label for="peso">Peso</label>
-                    <input type="text" formControlName="peso" class="form-control"
+                    <input type="number" formControlName="peso" class="form-control"
                               [ngClass]="{ 'is-invalid': submitted && f.peso.errors }"/>
                     <div *ngIf="submitted && f.peso.errors" class="invalid-feedback">
                         <div *ngIf="f.peso.errors.required">Peso é obrigatório</div>
@@ -210,11 +232,6 @@
                         <div *ngIf="submitted && f.marca.errors" class="invalid-feedback">
                             <div *ngIf="f.marca.errors.required">Marca é obrigatório</div>
                         </div>
-
-                        <div *ngIf="submitted && f.marca.errors" class="invalid-feedback">
-                            <div *ngIf="f.marca.errors.required">Marca é obrigatório</div>
-                        </div>
-
                     </div>
                     <div class="col-md-4 mb-4">
                         <label>&nbsp;</label>
@@ -224,9 +241,7 @@
                     </div>
                 </div>
             </div>
-            <!---->
             <br>
-            <!---->
             <div class="table-responsive-sm" style="text-align: center" *ngIf="itensTipoMedida.length !== 0">
                 <table class="table table-bordered table-hover">
                     <thead class="thead-dark">
@@ -239,17 +254,17 @@
                         </tr>
                     </thead>
                     <tbody formArrayName="pHITipoMedida">
-                        <tr *ngFor="let item of itensTipoMedida, let i = index" scope="row" [formGroupName]="i">
+                        <tr *ngFor="let item of itensTipoMedida, let i = index" scope="row" formGroupName="{{i}}">
                             <td>{{item.valor}}</td>
                             <td>{{f.precoVenda.value}}</td>
                             <td>
                                 <input type="text" class="form-control" formControlName="quantidade"/>
                             </td>
                             <td>{{f.peso.value}}</td>
-                            <td>
-                                <div formArrayName="dominiosFormArray" *ngFor="let dominio of dominios, let x = index">
-                                    <input type="checkbox" formControlName="{{x}}">{{dominio.nome}}
-                                </div>
+                           <td>
+                                <!--<div formArrayName="dominiosFormArray" *ngFor="let dominio of dominios, let x = index">-->
+                                    <!--<input type="checkbox" [formControlName]="x">{{dominio.nome}}-->
+                                <!--</div>-->
                             </td>
                         </tr>
                     </tbody>
