--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -51,7 +51,7 @@
             Venda
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownVenda">
-            <a class="dropdown-item" href="#">Efetuar Venda</a>
+            <a class="dropdown-item" routerLink="venda/venda-add-produto">Efetuar Venda</a>
             <a class="dropdown-item" href="#">Cancelar venda</a>
           </div>
         </li>
