--- a/src/app/gerenciar/produto/produto-cadastrar/produto-cadastrar.component.html
+++ b/src/app/gerenciar/produto/produto-cadastrar/produto-cadastrar.component.html
@@ -6,14 +6,14 @@
         <div class="card-body">
             <div class="form-group">
                 <div class="form-row">
-                    <div class="col-md-10 mb-10">
-                        <div class="form-group">
-                            <div class="custom-file">
-                                <input type="file" class="custom-file-input" (change)="selectFile($event)"/>
-                                <label class="custom-file-label">Choose file</label>
-                            </div>
-                        </div>
-                    </div>
+                    <!--<div class="col-md-10 mb-10">-->
+                        <!--<div class="form-group">-->
+                            <!--<div class="custom-file">-->
+                                <!--<input type="file" class="custom-file-input" (change)="selectFile($event)"/>-->
+                                <!--<label class="custom-file-label">Choose file</label>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
 
                 </div>
                 <div class="form-row">
