--- a/src/app/gerenciar/venda/vanda-add-produto/vanda-add-produto.component.html
+++ b/src/app/gerenciar/venda/vanda-add-produto/vanda-add-produto.component.html
@@ -1,101 +1,146 @@
 <div class="card panel-default">
-  <div class="card-header">
-    <h3 class="card-title">{{nome_page}}</h3>
-  </div>
-  <form [formGroup]="vendaAddProdutosFormGroup">
-    <div class="card-body">
-      <div class="form-group">
-        <div class="form-row">
-          <div class="col-md-2 mb-2">
-            <label for="barcode">Código de Barras</label>
-          </div>
-          <div class="col-md-8 mb-8">
-            <input type="text" formControlName="barcode" class="form-control"/>
-          </div>
-          <div class="col-md-2 mb-2">
-            <button type="button" class="btn btn-secondary" (click)="addProduto()">+ Adicionar</button>
-          </div>
-        </div>
-        <br>
-        <div class="card panel-default">
-          <div class="card-body">
-            <div class="form-row">
-              <div class="col-md-12 mb-12">
-                <div class="table-responsive-sm">
-                  <table class="table table-bordered table-hover">
-                    <thead class="thead-dark">
-                    <tr>
-                      <th scope="col">Código</th>
-                      <th scope="col">Nome</th>
-                      <th scope="col">Quantidade</th>
-                      <th scope="col">Tamanho</th>
-                      <th scope="col">Preço</th>
-                      <th scope="col">SubTotal</th>
-                      <th scope="col">total iten</th>
-                      <th scope="col">#</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let itemProdutoVenda of vendaHasItemProduto">
-                        <td>{{itemProdutoVenda.produtoHasItensTipoMedida.codigo}}</td>
-                        <td>{{itemProdutoVenda.produtoHasItensTipoMedida.produto.nome}}</td>
-                        <td>
-                          <input type="text" class="form-control"/>
-                        </td>
-                        <td>{{itemProdutoVenda.produtoHasItensTipoMedida.itensTipoMedida.valor}}</td>
-                        <td>{{itemProdutoVenda.produtoHasItensTipoMedida.produto.precoVenda}}</td>
-                        <td>{{itemProdutoVenda.produtoHasItensTipoMedida.produto.precoVenda * itemProdutoVenda.quantidade}}</td>
-                        <td></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <br>
-        <div class="card panel-default">
-          <div class="card-body">
-            <div class="form-row">
-              <div class="col-md-8 mb-8">
-                  <label for="formadepagamento">Formas de pagamento</label>
-                  <select class="form-control" formControlName="formadepagamento"
-                          [ngClass]="{ 'is-invalid': submitted && f.formadepagamento.errors }">
-                      <option *ngFor="let formadepagamento of formasdepagamentos"
-                              [value]="stringify(formadepagamento)">{{formadepagamento.nome}}</option>
-                  </select>
-                  <div *ngIf="submitted && f.formadepagamentos.errors" class="invalid-feedback">
-                    <div *ngIf="f.formadepagamentos.errors.required">Forma de pagamento é obrigatório</div>
-                  </div>
-              </div>
-              <div class="col-md-4 mb-4">
-                <div class="card panel-default">
-                  <div class="card-body">
-                    <div class="form-row">
-                      <div class="col-md-2 mb-2">
-                        <label for="codigoProduto">Pagamento:</label>
-                      </div>
-                      <div class="col-md-2 mb-2">
-                        <input type="text" formControlName="pagamento" class="form-control"/>
-                      </div>
-                    </div>
-                    <div class="form-row">
-                      <div class="col-md-2 mb-2">
-                        <label for="codigoProduto">Troco:</label>
-                      </div>
-                      <div class="col-md-2 mb-2">
-                        <input type="text" formControlName="troco" class="form-control"/>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="card-header">
+        <h3 class="card-title">{{nome_page}}</h3>
     </div>
-    <!---->
-  </form>
+    <form [formGroup]="vendaAddProdutosFormGroup">
+        <div class="card-body">
+            <div class="card">
+                <div class="card-body">
+                    <div class="form-group row">
+                        <label for="barcode" class="col-md-0 col-form-label">Código de Barras</label>
+                        <div class="col-md-8">
+                            <input type="text" class="form-control">
+                        </div>
+                        <button type="button" class="btn  btn-secondary" style="width: 450px" (click)="addProduto()">+ Adicionar</button>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="form-group">
+                <div class="card panel-default">
+                    <div class="card-body">
+                        <div class="form-row">
+                            <div class="col-md-12 mb-12">
+                                <div class="table-responsive-sm">
+                                    <table class="table table-bordered table-hover">
+                                        <thead class="thead-dark">
+                                        <tr>
+                                            <th scope="col">Código</th>
+                                            <th scope="col">Nome</th>
+                                            <th scope="col">Quantidade</th>
+                                            <th scope="col">Tamanho</th>
+                                            <th scope="col">Preço</th>
+                                            <th scope="col">SubTotal</th>
+                                            <th scope="col">total iten</th>
+                                            <th scope="col">#</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr *ngFor="let itemProdutoVenda of vendaHasItemProduto">
+                                            <td>{{itemProdutoVenda.produtoHasItensTipoMedida.codigo}}</td>
+                                            <td>{{itemProdutoVenda.produtoHasItensTipoMedida.produto.nome}}</td>
+                                            <td>
+                                                <input type="text" class="form-control"/>
+                                            </td>
+                                            <td>{{itemProdutoVenda.produtoHasItensTipoMedida.itensTipoMedida.valor}}</td>
+                                            <td>{{itemProdutoVenda.produtoHasItensTipoMedida.produto.precoVenda}}</td>
+                                            <td>{{itemProdutoVenda.produtoHasItensTipoMedida.produto.precoVenda * itemProdutoVenda.quantidade}}</td>
+                                            <td></td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="form-row">
+                    <div class="col-md-8 mb-2">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="col-md-12 mb-2">
+                                    <label for="formadepagamento">Formas de pagamento</label>
+                                    <select class="form-control" formControlName="formadepagamento"
+                                            [ngClass]="{ 'is-invalid': submitted && f.formadepagamento.errors }">
+                                        <option *ngFor="let formadepagamento of formasdepagamentos"
+                                                [value]="stringify(formadepagamento)">{{formadepagamento.nome}}</option>
+                                    </select>
+                                    <div *ngIf="submitted && f.formadepagamentos.errors" class="invalid-feedback">
+                                        <div *ngIf="f.formadepagamentos.errors.required">Forma de pagamento é obrigatório</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="form-row">
+                                    <div class="col-md-6 mb-2">
+                                        <div class="form-group row">
+                                            <label for="pagamento" class="col-md-3 col-form-label">Pagamento:</label>
+                                            <div class="col-md-9">
+                                                <input type="text" formControlName="pagamento" class="form-control"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 mb-2">
+                                        <div class="form-group row">
+                                            <label for="troco" class="col-md-2 col-form-label">Troco:</label>
+                                            <div class="col-md-10">
+                                                <input type="text" formControlName="troco" class="form-control"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="form-group row">
+                                    <label for="inputPassword" class="col-md-4 col-form-label">Subtotal:</label>
+                                    <div class="col-md-8">
+                                        <input type="subtotal" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="desconto" class="col-md-4 col-form-label">Desconto%:</label>
+                                    <div class="col-md-8">
+                                        <input type="number" class="form-control">
+                                    </div>
+                                </div>
+                                <hr>
+                                <br>
+                                <div class="form-group row">
+                                    <label for="totalPagar" class="col-md-4 col-form-label">Total a pagar:</label>
+                                    <div class="col-md-8">
+                                        <input type="number" class="form-control">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card text-right">
+                <div class="card-body">
+                    <div class="form-group row">
+                        <label for="inputPassword" class="col-md-10 col-form-label">Subtotal:</label>
+                        <div class="col-md-2">
+                            <input type="subtotal" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="desconto" class="col-md-10 col-form-label">Desconto%:</label>
+                        <div class="col-md-2" style="width: 380.22px">
+                            <input type="number" class="form-control">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+
 </div>
